y.output
Terminaux inutilisés dans la grammaire

   ID
   '|'
   '^'
   '&'
   '~'


Grammaire

    0 $accept: axiom $end

    1 axiom: %empty
    2      | P_PRAGMA

    3 P_PRAGMA: PRAGMA P_EXTENSION BACKSLASH '{' BLOC_LIST '}'

    4 P_EXTENSION: EXTENSION P_EXTENSION
    5            | %empty

    6 EXTENSION: PRECISION '(' INTEGER ')'
    7          | ROUNDING '(' SYMBOL ')'

    8 BLOC_LIST: BLOC BLOC_LIST
    9          | BLOC

   10 BLOC: '{' BLOC_LIST '}'
   11     | IF '(' EXPR ')' BLOC
   12     | IF '(' EXPR ')' BLOC ELSE BLOC
   13     | WHILE '(' EXPR ')' BLOC
   14     | DO BLOC WHILE '(' EXPR ')' ';'
   15     | FOR '(' INSTRUCTION ';' EXPR ';' INSTRUCTION ')' BLOC
   16     | INSTRUCTION ';'

   17 INSTRUCTION: ASSIGNMENT
   18            | FCT
   19            | %empty

   20 RVALUE: EXPR

   21 ASSIGNMENT: VAR '=' RVALUE
   22           | '(' ASSIGNMENT ')'

   23 NUMBER: INTEGER
   24       | FLOAT

   25 EXPR: EXPR '+' EXPR
   26     | EXPR '*' EXPR
   27     | EXPR '-' EXPR
   28     | EXPR '/' EXPR
   29     | '-' EXPR
   30     | '+' EXPR
   31     | EXPR '<' EXPR
   32     | EXPR '>' EXPR
   33     | EXPR LTE EXPR
   34     | EXPR GTE EXPR
   35     | EXPR EQ EXPR
   36     | EXPR NEQ EXPR
   37     | EXPR OR EXPR
   38     | EXPR AND EXPR
   39     | '!' EXPR
   40     | '(' EXPR ')'
   41     | VAR
   42     | NUMBER
   43     | FCT

   44 FCT: SYMBOL '(' PARAM ARG ')'

   45 VAR: SYMBOL
   46    | PRECISION
   47    | ROUNDING

   48 ARG: ',' PARAM ARG
   49    | %empty

   50 PARAM: EXPR
   51      | STRING


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 39
'&' (38)
'(' (40) 6 7 11 12 13 14 15 22 40 44
')' (41) 6 7 11 12 13 14 15 22 40 44
'*' (42) 26
'+' (43) 25 30
',' (44) 48
'-' (45) 27 29
'/' (47) 28
';' (59) 14 15 16
'<' (60) 31
'=' (61) 21
'>' (62) 32
'^' (94)
'{' (123) 3 10
'|' (124)
'}' (125) 3 10
'~' (126)
error (256)
ID (258)
INTEGER (259) 6 23
FLOAT (260) 24
PRAGMA (261) 3
SYMBOL (262) 7 44 45
STRING (263) 51
OR (264) 37
AND (265) 38
GTE (266) 34
LTE (267) 33
IF (268) 11 12
ELSE (269) 12
FOR (270) 15
WHILE (271) 13 14
DO (272) 14
NEQ (273) 36
EQ (274) 35
PRECISION (275) 6 46
ROUNDING (276) 7 47
BACKSLASH (277) 3


Non-terminaux, suivis des règles où ils apparaissent

$accept (41)
    à gauche: 0
axiom (42)
    à gauche: 1 2, à droite: 0
P_PRAGMA (43)
    à gauche: 3, à droite: 2
P_EXTENSION (44)
    à gauche: 4 5, à droite: 3 4
EXTENSION (45)
    à gauche: 6 7, à droite: 4
BLOC_LIST (46)
    à gauche: 8 9, à droite: 3 8 10
BLOC (47)
    à gauche: 10 11 12 13 14 15 16, à droite: 8 9 11 12 13 14 15
INSTRUCTION (48)
    à gauche: 17 18 19, à droite: 15 16
RVALUE (49)
    à gauche: 20, à droite: 21
ASSIGNMENT (50)
    à gauche: 21 22, à droite: 17 22
NUMBER (51)
    à gauche: 23 24, à droite: 42
EXPR (52)
    à gauche: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43, à droite: 11 12 13 14 15 20 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 50
FCT (53)
    à gauche: 44, à droite: 18 43
VAR (54)
    à gauche: 45 46 47, à droite: 21 41
ARG (55)
    à gauche: 48 49, à droite: 44 48
PARAM (56)
    à gauche: 50 51, à droite: 44 48


État 0

    0 $accept: . axiom $end

    PRAGMA  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 1 (axiom)

    axiom     aller à l'état 2
    P_PRAGMA  aller à l'état 3


État 1

    3 P_PRAGMA: PRAGMA . P_EXTENSION BACKSLASH '{' BLOC_LIST '}'

    PRECISION  décalage et aller à l'état 4
    ROUNDING   décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 5 (P_EXTENSION)

    P_EXTENSION  aller à l'état 6
    EXTENSION    aller à l'état 7


État 2

    0 $accept: axiom . $end

    $end  décalage et aller à l'état 8


État 3

    2 axiom: P_PRAGMA .

    $défaut  réduction par utilisation de la règle 2 (axiom)


État 4

    6 EXTENSION: PRECISION . '(' INTEGER ')'

    '('  décalage et aller à l'état 9


État 5

    7 EXTENSION: ROUNDING . '(' SYMBOL ')'

    '('  décalage et aller à l'état 10


État 6

    3 P_PRAGMA: PRAGMA P_EXTENSION . BACKSLASH '{' BLOC_LIST '}'

    BACKSLASH  décalage et aller à l'état 11


État 7

    4 P_EXTENSION: EXTENSION . P_EXTENSION

    PRECISION  décalage et aller à l'état 4
    ROUNDING   décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 5 (P_EXTENSION)

    P_EXTENSION  aller à l'état 12
    EXTENSION    aller à l'état 7


État 8

    0 $accept: axiom $end .

    $défaut  accepter


État 9

    6 EXTENSION: PRECISION '(' . INTEGER ')'

    INTEGER  décalage et aller à l'état 13


État 10

    7 EXTENSION: ROUNDING '(' . SYMBOL ')'

    SYMBOL  décalage et aller à l'état 14


État 11

    3 P_PRAGMA: PRAGMA P_EXTENSION BACKSLASH . '{' BLOC_LIST '}'

    '{'  décalage et aller à l'état 15


État 12

    4 P_EXTENSION: EXTENSION P_EXTENSION .

    $défaut  réduction par utilisation de la règle 4 (P_EXTENSION)


État 13

    6 EXTENSION: PRECISION '(' INTEGER . ')'

    ')'  décalage et aller à l'état 16


État 14

    7 EXTENSION: ROUNDING '(' SYMBOL . ')'

    ')'  décalage et aller à l'état 17


État 15

    3 P_PRAGMA: PRAGMA P_EXTENSION BACKSLASH '{' . BLOC_LIST '}'

    SYMBOL     décalage et aller à l'état 18
    IF         décalage et aller à l'état 19
    FOR        décalage et aller à l'état 20
    WHILE      décalage et aller à l'état 21
    DO         décalage et aller à l'état 22
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '{'        décalage et aller à l'état 25
    '('        décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 19 (INSTRUCTION)

    BLOC_LIST    aller à l'état 27
    BLOC         aller à l'état 28
    INSTRUCTION  aller à l'état 29
    ASSIGNMENT   aller à l'état 30
    FCT          aller à l'état 31
    VAR          aller à l'état 32


État 16

    6 EXTENSION: PRECISION '(' INTEGER ')' .

    $défaut  réduction par utilisation de la règle 6 (EXTENSION)


État 17

    7 EXTENSION: ROUNDING '(' SYMBOL ')' .

    $défaut  réduction par utilisation de la règle 7 (EXTENSION)


État 18

   44 FCT: SYMBOL . '(' PARAM ARG ')'
   45 VAR: SYMBOL .

    '('  décalage et aller à l'état 33

    $défaut  réduction par utilisation de la règle 45 (VAR)


État 19

   11 BLOC: IF . '(' EXPR ')' BLOC
   12     | IF . '(' EXPR ')' BLOC ELSE BLOC

    '('  décalage et aller à l'état 34


État 20

   15 BLOC: FOR . '(' INSTRUCTION ';' EXPR ';' INSTRUCTION ')' BLOC

    '('  décalage et aller à l'état 35


État 21

   13 BLOC: WHILE . '(' EXPR ')' BLOC

    '('  décalage et aller à l'état 36


État 22

   14 BLOC: DO . BLOC WHILE '(' EXPR ')' ';'

    SYMBOL     décalage et aller à l'état 18
    IF         décalage et aller à l'état 19
    FOR        décalage et aller à l'état 20
    WHILE      décalage et aller à l'état 21
    DO         décalage et aller à l'état 22
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '{'        décalage et aller à l'état 25
    '('        décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 19 (INSTRUCTION)

    BLOC         aller à l'état 37
    INSTRUCTION  aller à l'état 29
    ASSIGNMENT   aller à l'état 30
    FCT          aller à l'état 31
    VAR          aller à l'état 32


État 23

   46 VAR: PRECISION .

    $défaut  réduction par utilisation de la règle 46 (VAR)


État 24

   47 VAR: ROUNDING .

    $défaut  réduction par utilisation de la règle 47 (VAR)


État 25

   10 BLOC: '{' . BLOC_LIST '}'

    SYMBOL     décalage et aller à l'état 18
    IF         décalage et aller à l'état 19
    FOR        décalage et aller à l'état 20
    WHILE      décalage et aller à l'état 21
    DO         décalage et aller à l'état 22
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '{'        décalage et aller à l'état 25
    '('        décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 19 (INSTRUCTION)

    BLOC_LIST    aller à l'état 38
    BLOC         aller à l'état 28
    INSTRUCTION  aller à l'état 29
    ASSIGNMENT   aller à l'état 30
    FCT          aller à l'état 31
    VAR          aller à l'état 32


État 26

   22 ASSIGNMENT: '(' . ASSIGNMENT ')'

    SYMBOL     décalage et aller à l'état 39
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '('        décalage et aller à l'état 26

    ASSIGNMENT  aller à l'état 40
    VAR         aller à l'état 32


État 27

    3 P_PRAGMA: PRAGMA P_EXTENSION BACKSLASH '{' BLOC_LIST . '}'

    '}'  décalage et aller à l'état 41


État 28

    8 BLOC_LIST: BLOC . BLOC_LIST
    9          | BLOC .

    SYMBOL     décalage et aller à l'état 18
    IF         décalage et aller à l'état 19
    FOR        décalage et aller à l'état 20
    WHILE      décalage et aller à l'état 21
    DO         décalage et aller à l'état 22
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '{'        décalage et aller à l'état 25
    '('        décalage et aller à l'état 26

    ';'       réduction par utilisation de la règle 19 (INSTRUCTION)
    $défaut  réduction par utilisation de la règle 9 (BLOC_LIST)

    BLOC_LIST    aller à l'état 42
    BLOC         aller à l'état 28
    INSTRUCTION  aller à l'état 29
    ASSIGNMENT   aller à l'état 30
    FCT          aller à l'état 31
    VAR          aller à l'état 32


État 29

   16 BLOC: INSTRUCTION . ';'

    ';'  décalage et aller à l'état 43


État 30

   17 INSTRUCTION: ASSIGNMENT .

    $défaut  réduction par utilisation de la règle 17 (INSTRUCTION)


État 31

   18 INSTRUCTION: FCT .

    $défaut  réduction par utilisation de la règle 18 (INSTRUCTION)


État 32

   21 ASSIGNMENT: VAR . '=' RVALUE

    '='  décalage et aller à l'état 44


État 33

   44 FCT: SYMBOL '(' . PARAM ARG ')'

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    STRING     décalage et aller à l'état 47
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 53
    FCT     aller à l'état 54
    VAR     aller à l'état 55
    PARAM   aller à l'état 56


État 34

   11 BLOC: IF '(' . EXPR ')' BLOC
   12     | IF '(' . EXPR ')' BLOC ELSE BLOC

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 57
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 35

   15 BLOC: FOR '(' . INSTRUCTION ';' EXPR ';' INSTRUCTION ')' BLOC

    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '('        décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 19 (INSTRUCTION)

    INSTRUCTION  aller à l'état 58
    ASSIGNMENT   aller à l'état 30
    FCT          aller à l'état 31
    VAR          aller à l'état 32


État 36

   13 BLOC: WHILE '(' . EXPR ')' BLOC

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 59
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 37

   14 BLOC: DO BLOC . WHILE '(' EXPR ')' ';'

    WHILE  décalage et aller à l'état 60


État 38

   10 BLOC: '{' BLOC_LIST . '}'

    '}'  décalage et aller à l'état 61


État 39

   45 VAR: SYMBOL .

    $défaut  réduction par utilisation de la règle 45 (VAR)


État 40

   22 ASSIGNMENT: '(' ASSIGNMENT . ')'

    ')'  décalage et aller à l'état 62


État 41

    3 P_PRAGMA: PRAGMA P_EXTENSION BACKSLASH '{' BLOC_LIST '}' .

    $défaut  réduction par utilisation de la règle 3 (P_PRAGMA)


État 42

    8 BLOC_LIST: BLOC BLOC_LIST .

    $défaut  réduction par utilisation de la règle 8 (BLOC_LIST)


État 43

   16 BLOC: INSTRUCTION ';' .

    $défaut  réduction par utilisation de la règle 16 (BLOC)


État 44

   21 ASSIGNMENT: VAR '=' . RVALUE

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    RVALUE  aller à l'état 63
    NUMBER  aller à l'état 52
    EXPR    aller à l'état 64
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 45

   23 NUMBER: INTEGER .

    $défaut  réduction par utilisation de la règle 23 (NUMBER)


État 46

   24 NUMBER: FLOAT .

    $défaut  réduction par utilisation de la règle 24 (NUMBER)


État 47

   51 PARAM: STRING .

    $défaut  réduction par utilisation de la règle 51 (PARAM)


État 48

   30 EXPR: '+' . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 65
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 49

   29 EXPR: '-' . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 66
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 50

   39 EXPR: '!' . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 67
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 51

   40 EXPR: '(' . EXPR ')'

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 68
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 52

   42 EXPR: NUMBER .

    $défaut  réduction par utilisation de la règle 42 (EXPR)


État 53

   25 EXPR: EXPR . '+' EXPR
   26     | EXPR . '*' EXPR
   27     | EXPR . '-' EXPR
   28     | EXPR . '/' EXPR
   31     | EXPR . '<' EXPR
   32     | EXPR . '>' EXPR
   33     | EXPR . LTE EXPR
   34     | EXPR . GTE EXPR
   35     | EXPR . EQ EXPR
   36     | EXPR . NEQ EXPR
   37     | EXPR . OR EXPR
   38     | EXPR . AND EXPR
   50 PARAM: EXPR .

    OR   décalage et aller à l'état 69
    AND  décalage et aller à l'état 70
    GTE  décalage et aller à l'état 71
    LTE  décalage et aller à l'état 72
    NEQ  décalage et aller à l'état 73
    EQ   décalage et aller à l'état 74
    '<'  décalage et aller à l'état 75
    '>'  décalage et aller à l'état 76
    '+'  décalage et aller à l'état 77
    '-'  décalage et aller à l'état 78
    '*'  décalage et aller à l'état 79
    '/'  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 50 (PARAM)


État 54

   43 EXPR: FCT .

    $défaut  réduction par utilisation de la règle 43 (EXPR)


État 55

   41 EXPR: VAR .

    $défaut  réduction par utilisation de la règle 41 (EXPR)


État 56

   44 FCT: SYMBOL '(' PARAM . ARG ')'

    ','  décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 49 (ARG)

    ARG  aller à l'état 82


État 57

   11 BLOC: IF '(' EXPR . ')' BLOC
   12     | IF '(' EXPR . ')' BLOC ELSE BLOC
   25 EXPR: EXPR . '+' EXPR
   26     | EXPR . '*' EXPR
   27     | EXPR . '-' EXPR
   28     | EXPR . '/' EXPR
   31     | EXPR . '<' EXPR
   32     | EXPR . '>' EXPR
   33     | EXPR . LTE EXPR
   34     | EXPR . GTE EXPR
   35     | EXPR . EQ EXPR
   36     | EXPR . NEQ EXPR
   37     | EXPR . OR EXPR
   38     | EXPR . AND EXPR

    OR   décalage et aller à l'état 69
    AND  décalage et aller à l'état 70
    GTE  décalage et aller à l'état 71
    LTE  décalage et aller à l'état 72
    NEQ  décalage et aller à l'état 73
    EQ   décalage et aller à l'état 74
    '<'  décalage et aller à l'état 75
    '>'  décalage et aller à l'état 76
    '+'  décalage et aller à l'état 77
    '-'  décalage et aller à l'état 78
    '*'  décalage et aller à l'état 79
    '/'  décalage et aller à l'état 80
    ')'  décalage et aller à l'état 83


État 58

   15 BLOC: FOR '(' INSTRUCTION . ';' EXPR ';' INSTRUCTION ')' BLOC

    ';'  décalage et aller à l'état 84


État 59

   13 BLOC: WHILE '(' EXPR . ')' BLOC
   25 EXPR: EXPR . '+' EXPR
   26     | EXPR . '*' EXPR
   27     | EXPR . '-' EXPR
   28     | EXPR . '/' EXPR
   31     | EXPR . '<' EXPR
   32     | EXPR . '>' EXPR
   33     | EXPR . LTE EXPR
   34     | EXPR . GTE EXPR
   35     | EXPR . EQ EXPR
   36     | EXPR . NEQ EXPR
   37     | EXPR . OR EXPR
   38     | EXPR . AND EXPR

    OR   décalage et aller à l'état 69
    AND  décalage et aller à l'état 70
    GTE  décalage et aller à l'état 71
    LTE  décalage et aller à l'état 72
    NEQ  décalage et aller à l'état 73
    EQ   décalage et aller à l'état 74
    '<'  décalage et aller à l'état 75
    '>'  décalage et aller à l'état 76
    '+'  décalage et aller à l'état 77
    '-'  décalage et aller à l'état 78
    '*'  décalage et aller à l'état 79
    '/'  décalage et aller à l'état 80
    ')'  décalage et aller à l'état 85


État 60

   14 BLOC: DO BLOC WHILE . '(' EXPR ')' ';'

    '('  décalage et aller à l'état 86


État 61

   10 BLOC: '{' BLOC_LIST '}' .

    $défaut  réduction par utilisation de la règle 10 (BLOC)


État 62

   22 ASSIGNMENT: '(' ASSIGNMENT ')' .

    $défaut  réduction par utilisation de la règle 22 (ASSIGNMENT)


État 63

   21 ASSIGNMENT: VAR '=' RVALUE .

    $défaut  réduction par utilisation de la règle 21 (ASSIGNMENT)


État 64

   20 RVALUE: EXPR .
   25 EXPR: EXPR . '+' EXPR
   26     | EXPR . '*' EXPR
   27     | EXPR . '-' EXPR
   28     | EXPR . '/' EXPR
   31     | EXPR . '<' EXPR
   32     | EXPR . '>' EXPR
   33     | EXPR . LTE EXPR
   34     | EXPR . GTE EXPR
   35     | EXPR . EQ EXPR
   36     | EXPR . NEQ EXPR
   37     | EXPR . OR EXPR
   38     | EXPR . AND EXPR

    OR   décalage et aller à l'état 69
    AND  décalage et aller à l'état 70
    GTE  décalage et aller à l'état 71
    LTE  décalage et aller à l'état 72
    NEQ  décalage et aller à l'état 73
    EQ   décalage et aller à l'état 74
    '<'  décalage et aller à l'état 75
    '>'  décalage et aller à l'état 76
    '+'  décalage et aller à l'état 77
    '-'  décalage et aller à l'état 78
    '*'  décalage et aller à l'état 79
    '/'  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 20 (RVALUE)


État 65

   25 EXPR: EXPR . '+' EXPR
   26     | EXPR . '*' EXPR
   27     | EXPR . '-' EXPR
   28     | EXPR . '/' EXPR
   30     | '+' EXPR .
   31     | EXPR . '<' EXPR
   32     | EXPR . '>' EXPR
   33     | EXPR . LTE EXPR
   34     | EXPR . GTE EXPR
   35     | EXPR . EQ EXPR
   36     | EXPR . NEQ EXPR
   37     | EXPR . OR EXPR
   38     | EXPR . AND EXPR

    '*'  décalage et aller à l'état 79
    '/'  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 30 (EXPR)


État 66

   25 EXPR: EXPR . '+' EXPR
   26     | EXPR . '*' EXPR
   27     | EXPR . '-' EXPR
   28     | EXPR . '/' EXPR
   29     | '-' EXPR .
   31     | EXPR . '<' EXPR
   32     | EXPR . '>' EXPR
   33     | EXPR . LTE EXPR
   34     | EXPR . GTE EXPR
   35     | EXPR . EQ EXPR
   36     | EXPR . NEQ EXPR
   37     | EXPR . OR EXPR
   38     | EXPR . AND EXPR

    '*'  décalage et aller à l'état 79
    '/'  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 29 (EXPR)


État 67

   25 EXPR: EXPR . '+' EXPR
   26     | EXPR . '*' EXPR
   27     | EXPR . '-' EXPR
   28     | EXPR . '/' EXPR
   31     | EXPR . '<' EXPR
   32     | EXPR . '>' EXPR
   33     | EXPR . LTE EXPR
   34     | EXPR . GTE EXPR
   35     | EXPR . EQ EXPR
   36     | EXPR . NEQ EXPR
   37     | EXPR . OR EXPR
   38     | EXPR . AND EXPR
   39     | '!' EXPR .

    $défaut  réduction par utilisation de la règle 39 (EXPR)


État 68

   25 EXPR: EXPR . '+' EXPR
   26     | EXPR . '*' EXPR
   27     | EXPR . '-' EXPR
   28     | EXPR . '/' EXPR
   31     | EXPR . '<' EXPR
   32     | EXPR . '>' EXPR
   33     | EXPR . LTE EXPR
   34     | EXPR . GTE EXPR
   35     | EXPR . EQ EXPR
   36     | EXPR . NEQ EXPR
   37     | EXPR . OR EXPR
   38     | EXPR . AND EXPR
   40     | '(' EXPR . ')'

    OR   décalage et aller à l'état 69
    AND  décalage et aller à l'état 70
    GTE  décalage et aller à l'état 71
    LTE  décalage et aller à l'état 72
    NEQ  décalage et aller à l'état 73
    EQ   décalage et aller à l'état 74
    '<'  décalage et aller à l'état 75
    '>'  décalage et aller à l'état 76
    '+'  décalage et aller à l'état 77
    '-'  décalage et aller à l'état 78
    '*'  décalage et aller à l'état 79
    '/'  décalage et aller à l'état 80
    ')'  décalage et aller à l'état 87


État 69

   37 EXPR: EXPR OR . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 88
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 70

   38 EXPR: EXPR AND . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 89
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 71

   34 EXPR: EXPR GTE . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 90
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 72

   33 EXPR: EXPR LTE . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 91
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 73

   36 EXPR: EXPR NEQ . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 92
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 74

   35 EXPR: EXPR EQ . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 93
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 75

   31 EXPR: EXPR '<' . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 94
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 76

   32 EXPR: EXPR '>' . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 95
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 77

   25 EXPR: EXPR '+' . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 96
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 78

   27 EXPR: EXPR '-' . EXPR

    INTEGER    décalage et aller à l'état 45
    FLOAT      décalage et aller à l'état 46
    SYMBOL     décalage et aller à l'état 18
    PRECISION  décalage et aller à l'état 23
    ROUNDING   décalage et aller à l'état 24
    '+'        décalage et aller à l'état 48
    '-'        décalage et aller à l'état 49
    '!'        décalage et aller à l'état 50
    '('        décalage et aller à l'état 51

    NUMBER  aller à l'état 52
    EXPR    aller à l'état 97
    FCT     aller à l'état 54
    VAR     aller à l'état 55


État 79

   26 EXPR: EXPR '*' . EXPR
